Added new footer and new elements and styles in home component

--- a/src/app/components/user/navbar/navbar.component.html
+++ b/src/app/components/user/navbar/navbar.component.html
@@ -17,7 +17,7 @@
 
                             <a href="/cards" routerLinkActive="bg-gray-900" [routerLink]="['/cards']"
                                 [routerLinkActiveOptions]="{exact: true}"
-                                class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Card</a>
+                                class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Cards</a>
                         </div>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
                     aria-current="page">Home</a>
 
                 <a href="#"
-                    class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Card</a>
+                    class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Cards</a>
             </div>
         </div>
     </nav>
