--- a/src/app/components/user/navbar/navbar.component.html
+++ b/src/app/components/user/navbar/navbar.component.html
@@ -4,8 +4,7 @@
             <div class="flex items-center justify-between h-16">
                 <div class="flex items-center">
                     <div class="flex-shrink-0">
-                        <img class="h-8 w-8" src="../../../assets/images/compass.png"
-                            alt="Quizz logo">
+                        <img class="h-8 w-8" src="../../../assets/images/compass.png" alt="Quizz logo">
                     </div>
                     <div class="hidden md:block">
                         <div class="ml-10 flex items-baseline space-x-4">
@@ -14,10 +13,12 @@
                                 [routerLinkActiveOptions]="{exact: true}"
                                 class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
                                 aria-current="page">Home</a>
-
                             <a href="/cards" routerLinkActive="bg-gray-900" [routerLink]="['/cards']"
                                 [routerLinkActiveOptions]="{exact: true}"
                                 class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Cards</a>
+                            <a href="/play" routerLinkActive="bg-gray-900" [routerLink]="['/play']"
+                                [routerLinkActiveOptions]="{exact: true}"
+                                class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Play</a>
                         </div>
                     </div>
                 </div>
@@ -41,9 +42,7 @@
                                     class="max-w-xs bg-gray-800 rounded-full flex items-center text-sm focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white"
                                     id="user-menu-button" aria-expanded="false" aria-haspopup="true">
                                     <span class="sr-only">Open user menu</span>
-                                    <img class="h-8 w-8 rounded-full"
-                                        src="../../../../assets/images/man.png"
-                                        alt="">
+                                    <img class="h-8 w-8 rounded-full" src="../../../../assets/images/man.png" alt="">
                                 </button>
                             </div>
                         </div>
@@ -73,11 +72,13 @@
         <!-- Mobile menu, show/hide based on menu state. -->
         <div class="md:hidden" id="mobile-menu">
             <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
-                <a href="#" class="bg-gray-900 text-white block px-3 py-2 rounded-md text-base font-medium"
+                <a href="/" routerLinkActive="bg-gray-900" [routerLink]="['/']" [routerLinkActiveOptions]="{exact: true}"
+                    class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium"
                     aria-current="page">Home</a>
-
-                <a href="#"
+                <a href="/cards" routerLinkActive="bg-gray-900" [routerLink]="['/cards']" [routerLinkActiveOptions]="{exact: true}"
                     class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Cards</a>
+                <a href="/play" routerLinkActive="bg-gray-900" [routerLink]="['/play']" [routerLinkActiveOptions]="{exact: true}"
+                    class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Play</a>
             </div>
         </div>
     </nav>
