Fixed bug in card form when language is edited

--- a/src/app/components/user/cards/card/card.component.html
+++ b/src/app/components/user/cards/card/card.component.html
@@ -45,10 +45,10 @@
                                     <label for="language"
                                         class="block text-sm font-medium text-gray-700">Language</label>
                                     <select [ngClass]="canEdit ? 'enable-input' : 'disable-input'" id="language"
-                                        name="language" [(ngModel)]="card.language.name"
-                                        (change)="card.language.name" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm 
-                                        focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
-                                        <option *ngFor="let language of languages" [ngValue]="card.language.name">
+                                        name="language" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm 
+                                        focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" [(ngModel)]="language.name">
+                                        <option>{{language.name}}</option>
+                                        <option *ngFor="let language of filteredLanguages" [ngValue]="language.name">
                                             {{language.name}}
                                         </option>
                                     </select>
