--- a/src/app/components/user/cards/cards.component.html
+++ b/src/app/components/user/cards/cards.component.html
@@ -16,8 +16,7 @@
                                     class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
                             </div>
                             <div class="col-span-6 sm:col-span-3">
-                                <label for="last-name" class="block text-sm font-medium text-gray-700">Word in
-                                    english</label>
+                                <label for="last-name" class="block text-sm font-medium text-gray-700">Word in another language</label>
                                 <input type="text" name="english" id="english" [(ngModel)]="newCard.translation"
                                     class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
                             </div>
