--- a/src/app/components/user/cards/card/card.component.html
+++ b/src/app/components/user/cards/card/card.component.html
@@ -27,12 +27,17 @@
                                         name="english" id="english" [(ngModel)]="card.translation" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm 
                                         border-gray-300 rounded-md">
                                 </div>
-                                <div class="col-span-6 sm:col-span-4">
-                                    <label for="email-address"
-                                        class="block text-sm font-medium text-gray-700">Set</label>
-                                    <input [ngClass]="canEdit ? 'enable-input' : 'disable-input'" type="text" name="set"
-                                        id="set" [(ngModel)]="card.set" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm 
-                                        border-gray-300 rounded-md">
+                                <div class="col-span-6 sm:col-span-6 lg:col-span-2">
+                                    <label for="category"
+                                        class="block text-sm font-medium text-gray-700">Category</label>
+                                    <select [ngClass]="canEdit ? 'enable-input' : 'disable-input'" id="category"
+                                        name="category" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm 
+                                        focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" [(ngModel)]="category.name">
+                                        <option>{{category.name}}</option>
+                                        <option *ngFor="let category of filteredCategories" [ngValue]="category.name">
+                                            {{category.name}}
+                                        </option>
+                                    </select>
                                 </div>
                                 <div class="col-span-6 sm:col-span-4">
                                     <label for="email-address"
