--- a/src/app/components/user/cards/cards.component.html
+++ b/src/app/components/user/cards/cards.component.html
@@ -16,14 +16,19 @@
                                     class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
                             </div>
                             <div class="col-span-6 sm:col-span-3">
-                                <label for="last-name" class="block text-sm font-medium text-gray-700">Word in another language</label>
+                                <label for="last-name" class="block text-sm font-medium text-gray-700">Word in another
+                                    language</label>
                                 <input type="text" name="english" id="english" [(ngModel)]="newCard.translation"
                                     class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
                             </div>
-                            <div class="col-span-6 sm:col-span-4">
-                                <label for="email-address" class="block text-sm font-medium text-gray-700">Set</label>
-                                <input type="text" name="set" id="set" [(ngModel)]="newCard.set"
-                                    class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                            <div class="col-span-6 sm:col-span-6 lg:col-span-2">
+                                <label for="category" class="block text-sm font-medium text-gray-700">Category</label>
+                                <select id="category" name="category" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full 
+                                shadow-sm sm:text-sm border-gray-300 rounded-md" [(ngModel)]="category">
+                                    <option *ngFor="let category of categories" [ngValue]="category">
+                                        {{category.name}}
+                                    </option>
+                                </select>
                             </div>
                             <div class="col-span-6 sm:col-span-4">
                                 <label for="email-address" class="block text-sm font-medium text-gray-700">Group</label>
@@ -87,7 +92,7 @@
                         </button>
                     </div>
                     <div class="flex flex-col items-center pb-10">
-                        <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">{{card.set}}</h5>
+                        <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">{{card.category.name}}</h5>
                         <span class="text-sm text-gray-500 dark:text-gray-400">{{card.translation}}</span>
                         <span class="text-sm text-gray-500 dark:text-gray-400">{{card.spanish}}</span>
                         <div class="flex mt-4 space-x-3 lg:mt-6">
