--- a/src/app/components/user/navbar/navbar.component.html
+++ b/src/app/components/user/navbar/navbar.component.html
@@ -8,7 +8,6 @@
                     </div>
                     <div class="hidden md:block">
                         <div class="ml-10 flex items-baseline space-x-4">
-                            <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
                             <a href="/" routerLinkActive="bg-gray-900" [routerLink]="['/']"
                                 [routerLinkActiveOptions]="{exact: true}"
                                 class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
@@ -19,27 +18,47 @@
                             <a href="/play" routerLinkActive="bg-gray-900" [routerLink]="['/play']"
                                 [routerLinkActiveOptions]="{exact: true}"
                                 class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Play</a>
+                            <div class="dropdown">
+                                <button type="button"
+                                    class="text-white bg-indigo-600 hover:bg-indigo-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium inline-flex"
+                                    aria-expanded="false">
+                                    <span>Create</span>
+                                    <svg class="text-gray-400 ml-2 h-5 w-5 group-hover:text-gray-500"
+                                        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
+                                        aria-hidden="true">
+                                        <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 
+                                            1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
+                                    </svg>
+                                </button>
+                                <ul class="dropdown-menu hidden text-gray-700 bg-white rounded-lg">
+                                    <li class=""><a
+                                            class="rounded-t bg-white hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
+                                            (click)="saveCategory()">New Category</a></li>
+                                    <li class=""><a
+                                            class="rounded-b bg-white hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"
+                                            (click)="saveLanguage()">New Language</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="hidden md:block">
                     <div class="ml-4 flex items-center md:ml-6">
-                        <button type="button"
-                            class="bg-gray-800 p-1 rounded-full text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white">
+                        <button type="button" class="bg-gray-800 p-1 rounded-full text-gray-400 hover:text-white focus:outline-none focus:ring-2 
+                            focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white">
                             <span class="sr-only">View notifications</span>
-                            <!-- Heroicon name: outline/bell -->
                             <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                 stroke="currentColor" aria-hidden="true">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 
+                                2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 
+                                    10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 
+                                    3 0 11-6 0v-1m6 0H9" />
                             </svg>
                         </button>
-
-                        <!-- Profile dropdown -->
                         <div class="ml-3 relative">
                             <div>
-                                <button type="button"
-                                    class="max-w-xs bg-gray-800 rounded-full flex items-center text-sm focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white"
+                                <button type="button" class="max-w-xs bg-gray-800 rounded-full flex items-center text-sm focus:outline-none 
+                                    focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white"
                                     id="user-menu-button" aria-expanded="false" aria-haspopup="true">
                                     <span class="sr-only">Open user menu</span>
                                     <img class="h-8 w-8 rounded-full" src="../../../../assets/images/man.png" alt="">
@@ -49,10 +68,9 @@
                     </div>
                 </div>
                 <div class="-mr-2 flex md:hidden">
-                    <!-- Mobile menu button -->
-                    <button type="button"
-                        class="bg-gray-800 inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white"
-                        aria-controls="mobile-menu" aria-expanded="false">
+                    <button type="button" class="bg-gray-800 inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-white 
+                        hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 
+                        focus:ring-offset-gray-800 focus:ring-white" aria-controls="mobile-menu" aria-expanded="false">
                         <span class="sr-only">Open main menu</span>
                         <svg class="block h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                             stroke="currentColor" aria-hidden="true">
@@ -68,16 +86,17 @@
                 </div>
             </div>
         </div>
-
-        <!-- Mobile menu, show/hide based on menu state. -->
         <div class="md:hidden" id="mobile-menu">
             <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
-                <a href="/" routerLinkActive="bg-gray-900" [routerLink]="['/']" [routerLinkActiveOptions]="{exact: true}"
+                <a href="/" routerLinkActive="bg-gray-900" [routerLink]="['/']"
+                    [routerLinkActiveOptions]="{exact: true}"
                     class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium"
                     aria-current="page">Home</a>
-                <a href="/cards" routerLinkActive="bg-gray-900" [routerLink]="['/cards']" [routerLinkActiveOptions]="{exact: true}"
+                <a href="/cards" routerLinkActive="bg-gray-900" [routerLink]="['/cards']"
+                    [routerLinkActiveOptions]="{exact: true}"
                     class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Cards</a>
-                <a href="/play" routerLinkActive="bg-gray-900" [routerLink]="['/play']" [routerLinkActiveOptions]="{exact: true}"
+                <a href="/play" routerLinkActive="bg-gray-900" [routerLink]="['/play']"
+                    [routerLinkActiveOptions]="{exact: true}"
                     class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Play</a>
             </div>
         </div>
