--- a/src/app/components/user/navbar/navbar.component.html
+++ b/src/app/components/user/navbar/navbar.component.html
@@ -15,9 +15,9 @@
                             <a href="/cards" routerLinkActive="bg-gray-900" [routerLink]="['/cards']"
                                 [routerLinkActiveOptions]="{exact: true}"
                                 class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Cards</a>
-                            <a href="/play" routerLinkActive="bg-gray-900" [routerLink]="['/play']"
+                            <!-- <a href="/play" routerLinkActive="bg-gray-900" [routerLink]="['/play']"
                                 [routerLinkActiveOptions]="{exact: true}"
-                                class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Play</a>
+                                class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Play</a> -->
                             <div class="dropdown">
                                 <button type="button"
                                     class="text-white bg-indigo-600 hover:bg-indigo-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium inline-flex"
