Added card in play-game component and fixed some styles

--- a/src/app/components/user/cards/components/card/card.component.html
+++ b/src/app/components/user/cards/components/card/card.component.html
@@ -1,8 +1,8 @@
 <div class="max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700 w-56">
     <div class="flex justify-end px-4 pt-4">
         <button id="menu-button" aria-expanded="true" aria-haspopup="true" class="hidden sm:inline-block text-gray-500 dark:text-gray-400
-         hover:bg-gray-100 dark:hover:bg-gray-700 
-                focus:outline-none focus:ring-4 focus:outline-none focus:ring-gray-200 dark:focus:ring-gray-700 
+         hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:outline-none 
+         focus:ring-gray-200 dark:focus:ring-gray-700 
                 rounded-lg text-sm p-1.5" type="button" (click)="delete()">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M16.3394 9.32245C16.7434 8.94589 16.7657 8.31312 16.3891 7.90911C16.0126 7.50509 15.3798
