--- a/src/app/components/user/games/components/play-game/play-game.component.html
+++ b/src/app/components/user/games/components/play-game/play-game.component.html
@@ -1,6 +1,54 @@
 <app-navbar></app-navbar>
 <div class="flex flex-col h-screen">
     <div class="mt-10 justify-center m-auto">
+        <div class="w-[32rem]" *ngIf="cards.length > 0">
+            <div
+                class="mt-10 rounded-t-lg border shadow-md dark:bg-gray-800 dark:border-gray-700">
+                <div class="flex flex-col items-center py-28">
+                    <h5 class="mb-1 text-3xl font-medium dark:text-gray-200">
+                        {{cards[position].translation}}</h5>
+                </div>
+            </div>
+            <div class="bg-gray-600 rounded-b-lg text-center py-4">
+                <div class="flex justify-center">
+                    <button class="mr-4" *ngIf="cards.length > 1" (click)="changeCard('left')">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M11.9481 14.8285L10.5339 16.2427L6.29122 12L10.5339 7.7574L11.9481 9.17161L10.1196 11H17.6568V13H10.1196L11.9481 14.8285Z"
+                                fill="white" />
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M4.22183 19.7782C-0.0739419 15.4824 -0.0739419 8.51759 4.22183 4.22183C8.51759 
+                                -0.0739419 15.4824 -0.0739419 19.7782 4.22183C24.0739 8.51759 24.0739 15.4824 
+                                19.7782 19.7782C15.4824 24.0739 8.51759 24.0739 4.22183 19.7782ZM5.63604 
+                                18.364C2.12132 14.8492 2.12132 9.15076 5.63604 5.63604C9.15076 2.12132 14.8492 
+                                2.12132 18.364 5.63604C21.8787 9.15076 21.8787 14.8492 18.364 18.364C14.8492 
+                                21.8787 9.15076 21.8787 5.63604 18.364Z"
+                                fill="white" />
+                        </svg>
+                    </button>
+                    <p class="text-gray-200">{{position+1}}/{{cards.length}}</p>
+                    <button class="ml-4" *ngIf="cards.length > 1" (click)="changeCard('right')">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M12.0519 14.8285L13.4661 16.2427L17.7088 12L13.4661 7.7574L12.0519 9.17161L13.8804 11H6.34321V13H13.8803L12.0519 14.8285Z"
+                                fill="white" />
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M19.7782 19.7782C24.0739 15.4824 24.0739 8.51759 19.7782 4.22183C15.4824 -0.0739417 
+                                8.51759 -0.0739417 4.22183 4.22183C-0.0739417 8.51759 -0.0739417 15.4824 4.22183 
+                                19.7782C8.51759 24.0739 15.4824 24.0739 19.7782 19.7782ZM18.364 18.364C21.8787 14.8492 21.8787 
+                                9.15076 18.364 5.63604C14.8492 2.12132 9.15076 2.12132 5.63604 5.63604C2.12132 9.15076 2.12132 
+                                14.8492 5.63604 18.364C9.15076 21.8787 14.8492 21.8787 18.364 18.364Z"
+                                fill="white" />
+                        </svg>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div *ngIf="cards.length == 0" class="items-start justify-center m-auto max-w-3xl p-9 flex-grow">
+            <div class="px-4 sm:px-0">
+                <h3 class="text-lg font-medium leading-6 text-gray-900 mb-4">The card list is empty</h3>
+            </div>
+        </div>
     </div>
     <app-footer></app-footer>
 </div>
