--- a/src/app/components/user/games/games.component.html
+++ b/src/app/components/user/games/games.component.html
@@ -7,7 +7,8 @@
             </div>
             <div class="inline-grid grid-cols-3 gap-4">
                 <div *ngFor="let category of categories">
-                    <app-game [category]="category">
+                    <app-game 
+                        [category]="category">
                     </app-game>
                 </div>
             </div>
