--- a/src/app/components/user/navbar/navbar.component.html
+++ b/src/app/components/user/navbar/navbar.component.html
@@ -13,10 +13,10 @@
                                 class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
                                 aria-current="page">Home</a>
                             <a href="/cards" routerLinkActive="bg-gray-900" [routerLink]="['/cards']"
-                                [routerLinkActiveOptions]="{exact: true}"
+                                [routerLinkActiveOptions]="{exact: false}"
                                 class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Cards</a>
                             <a href="/play" routerLinkActive="bg-gray-900" [routerLink]="['/play']"
-                                [routerLinkActiveOptions]="{exact: true}"
+                                [routerLinkActiveOptions]="{exact: false}"
                                 class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Play</a>
                             <div class="dropdown">
                                 <button type="button"
@@ -96,10 +96,10 @@
                     class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium"
                     aria-current="page">Home</a>
                 <a href="/cards" routerLinkActive="bg-gray-900" [routerLink]="['/cards']"
-                    [routerLinkActiveOptions]="{exact: true}"
+                    [routerLinkActiveOptions]="{exact: false}"
                     class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Cards</a>
                 <a href="/play" routerLinkActive="bg-gray-900" [routerLink]="['/play']"
-                    [routerLinkActiveOptions]="{exact: true}"
+                    [routerLinkActiveOptions]="{exact: false}"
                     class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Play</a>
             </div>
         </div>
